    - Added an optional production column to quickly disable certain recipes by checkbox
    - Added a search bar to the recipe picker
    - Added the ability to alt-click a machine when changing it to implicitly set it to the preferred one for its category
  Changes:
    - The calculation model now considers the base energy drain that most electrical machines have
    - Setting recipe item amounts directly now behaves more intuitively
    - Hitting the 'E' keyboard shortcut now confirms the dialog that is open if possible, mirroring the vanilla behavior introduced with 1.1
    - Removed the 'automatic cleanup' functionality that would delete lines that became useless after you removed a top level product. This functionality had been broken in several ways that are hard to fix, so I decided it was not worth keeping around.
    - Increased the maximum length of subfactory names to 256 characters, while accomodating for longer names in the UI
    - Various minor UI improvements unrelated to the main interface redesign
    - Removed migrations for versions before 0.18 since the game doesn't load those saves anymore
    - Updated to a newer version of flib (v0.6.0)
  Bugfixes:
    - Fixed that changing the limit on a machine would reset the 'hard limit'-switch

---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 16. 11. 2020
  Bugfixes:
    - Fixed a crash with Space Exploration

---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 16. 11. 2020
  Bugfixes:
    - Added a couple missing locale strings
    - Fixed an issue where the beacon total would not be shown when editing a beacon
    - Fixed an issue where the total machine count for a subfloor would be incorrect if that subfloor had itself a subfloor

---------------------------------------------------------------------------------------------------
Version: 1.0.11