@@ -315,8 +315,8 @@ tut_mode_tooltip_padding=\n\n
 tut_mode_subfactory=Left-click: Select\nRight-click: Edit\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
 tut_mode_tl_product=Left-click: Add recipe\nRight-click: Edit\nControl-right-click: Delete\nShift-left-click: Move right\nControl-left-click: Move left
 tut_mode_recipe=Left-click: Open subfloor\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up\nShift-alt-left-click: Move to the bottom\nControl-alt-left-click: Move to the top
-tut_mode_machine=Left-click: Change machine\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nAlt-click: Reset to default
-tut_mode_beacon=Left/Right-click: Edit\nControl-right-click: Delete
+tut_mode_machine=Left-click: Change machine\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade\nAlt-left-click: Put into cursor\nAlt-right-click: Reset to default
+tut_mode_beacon=Left/Right-click: Edit\nControl-right-click: Delete\nAlt-left-click: Put into cursor
 tut_mode_module=Left/Right-click: Edit\nControl-right-click: Delete
 tut_mode_product=Left-click: Prioritize\nRight-click: Specify amount
 tut_mode_byproduct=Right-click: Specify amount
