@@ -5,7 +5,8 @@ Date: 00. 00. 0000
     - Redesigned the main interface. This means that some things are in different spots than they used to be, and some niche features got lost along the way. I'm sorry about those few that went missing, but I needed to get this done in a reasonable amount of time. If there is anything specific you're dearly missing, please let me know on the mod portal or on Discord.
     - Added an optional production column to quickly disable certain recipes by checkbox
     - Added a search bar to the recipe picker
-    - Added the ability to alt-click a machine when changing it to implicitly set it to the preferred one for its category
+    - You can now alt-click any machine or beacon in your production line to put it into your cursor as a blueprint for easy stamping
+    - You can now also alt-click a machine when changing it to implicitly set it to the preferred one for its category
   Changes:
     - The calculation model now considers the base energy drain that most electrical machines have
     - Setting recipe item amounts directly now behaves more intuitively
